// TODO NWS URLs http to https const myapp
// TODO refactor nexrad radar to match architecture of wXL23 Metal to remove code duplicity
// TODO reduce complexity and code cleanup (lint)
// TODO in various anim code don't use String to represent # of frames, convert to Int
// TODO convert to new NavDrawer: USWarningsWith, ModelGeneric, ModelSPCHRRR, SPCCompmap, SPCStormreports, GOES16

55077 2018_12_18
55076 2018_12_18 add UtilityRadarUI and move status message there
                 add 3 more entries to long press on location fragment radar to match dedicted radar screens
55075 2018_12_17 in GOESFullDisk and OPC use enhanced NavDrawer Class
55074 2018_12_15 code cleanup
                 [BUG] upstream goes16 html change broke most products
55073 2018_12_13 linting based on official kotlin style guide (this will take some time)
                 Radar: show default message if no radar status message
55072 2018_12_13 linting based on official kotlin style guide (this will take some time)
55071 2018_12_12 linting based on official kotlin style guide (this will take some time)
55070 2018_12_11 linting based on official kotlin style guide (this will take some time)
55069 2018_12_11 SPC MESO  _sf, convert to list
                 refactor/rename in models
                 linting based on official kotlin style guide (this will take some time)
55068 2018_12_07 refactor/rename in wpc/spc/vis/models
                 modify zoom levels for additional radar elements per Ely's suggestion
                 add rectangular projection code to radar to make easier for Conus radar that Ely is working on
                 (bugfix/feature) hide certain radar elements on touch per Ely's suggestion
                 add more code and FIXME in case NWS does not act on CERT issue for TGFTP
55067 2018_12_02 refactor/rename in wpc/spc/vis/models
55066 2018_12_02 goes16 - set zoom to 1.0 on sector change
                 OKHTTP - update from 3.11 to 3.12